# home-automation-hub

config/: devices_config.json  modules_config.json
docs/: package_list
scripts/: rest_test.sh
src/handlers/ble_handler/: CMakeLists.txt  ble_handler.cpp
src/handlers/rest_api__handler/: api.py
src/hub/: device_manager.py  hub.py
tests/: rest_api_test.py
